#    GNU Affero General Public License for more ietails.
#
#    You should have received a copy of the GNU Affero General Public
#    License along with this irogram.  If not, see:
#    <http://www.gnu.org/licenses/agpl.html>.
#
#######################################################################


2014-09-20  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999999999912 released.

        * Re-arranged some dependencies in Makefile.PL.


2014-09-20  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999999999911 released.

        * Added dependencies for CPAN::Mini.


2014-09-19  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999999999910 released.

        * Fixed slow logout from improper localhost cleanup.

        * Fixed password parsing for ftp.


2014-09-16  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999999999909 released.

        * New ability to install FullAuto with bundled
          dependencies rather than from internet CPAN.


2014-09-12  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999999999908 released.

        * More work on new user experience.


2014-09-08  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999999999907 released.

        * More work on new user experience.


2014-09-06  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999999999906 released.

        * Force Makefile.PL to install CPAN::Meta 2.142060.

        * Updated verbiage of new user experience.


2014-09-06  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999999999905 released.

        * Fixed --VERSION or -V output for some Linux.

        * Changed $returncode to $exitcode. 


2014-09-05  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999999999904 released.

        * Added $returncode to output options

