@@ -22,7 +22,7 @@ package Net::FullAuto;
 #######################################################################
 
 
-our $VERSION='0.999999999912';
+our $VERSION='0.999999999913';
 
 
 use 5.005;
